feat(auth-service): add authentication services
